--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2023"],
+    "lib": ["ES2023", "DOM", "DOM.Iterable"], // Add DOM and DOM.Iterable for React projects
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -11,6 +11,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "jsx": "react-jsx", // Crucial for React components
 
     /* Linting */
     "strict": true,
@@ -18,5 +19,14 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "src/**/*.ts",      // Include all .ts files in src and its subdirectories
+    "src/**/*.tsx",     // Include all .tsx (React components) files in src and its subdirectories
+    "src/**/*.d.ts",     // Include all declaration files in src and its subdirectories
+    "vite.config.ts"    // Keep this if vite.config.ts needs to be type-checked
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
